cloudformation/cfn-demo.yaml
Parameters:
  RockyLinuxAMI:
    Type: String
    Default: ami-08f362c39d03a4eb5

Resources:

# Network
  MgmtNetwork:
    Type: AWS::EC2::VPC
    Properties: 
      CidrBlock: 10.0.0.0/16
      EnableDnsHostnames: False
      Tags:
        - Key: Name
          Value: mgmt

  K8sNetwork:
    Type: AWS::EC2::VPC
    Properties: 
      CidrBlock: 10.1.0.0/16
      EnableDnsHostnames: False
      Tags:
        - Key: Name
          Value: k8s-master

  MgmtInternetGateway:
    Type: AWS::EC2::InternetGateway
    Properties:
      Tags:
        - Key: Name
          Value: mgmt-igw

  K8sInternetGateway:
    Type: AWS::EC2::InternetGateway
    Properties:
      Tags:
        - Key: Name
          Value: k8s-igw

  MgmtInternetGatewayAttachment:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      InternetGatewayId: !Ref MgmtInternetGateway
      VpcId: !Ref MgmtNetwork

  K8sInternetGatewayAttachment:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      InternetGatewayId: !Ref K8sInternetGateway
      VpcId: !Ref K8sNetwork

  MgmtRouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref MgmtNetwork
      Tags:
      - Key: Name
        Value: mgmt-rt

  K8sRouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref K8sNetwork
      Tags:
      - Key: Name
        Value: k8s-rt

  MgmtDefaultRoute:
    Type: AWS::EC2::Route
    DependsOn: MgmtInternetGatewayAttachment
    Properties:
       RouteTableId: !Ref MgmtRouteTable
       DestinationCidrBlock: 0.0.0.0/0
       GatewayId: !Ref MgmtInternetGateway

  K8sDefaultRoute:
    Type: AWS::EC2::Route
    DependsOn: K8sInternetGatewayAttachment
    Properties:
       RouteTableId: !Ref K8sRouteTable
       DestinationCidrBlock: 0.0.0.0/0
       GatewayId: !Ref K8sInternetGateway

  MgmtDefaultSubnet:
    Type: AWS::EC2::Subnet
    Properties:
      CidrBlock: 10.0.0.0/24
      MapPublicIpOnLaunch: True
      Tags:
        - Key: Name
          Value: mgmt-default-subnet
      VpcId: !Ref MgmtNetwork

  MgmtDefaultRouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref MgmtDefaultSubnet
      RouteTableId: !Ref MgmtRouteTable

  K8sMasterSubnetAz1:
    Type: AWS::EC2::Subnet
    Properties:
      AvailabilityZone: !Select [ 0, !GetAZs ]
      CidrBlock: "10.1.0.0/24"
      #MapPublicIpOnLaunch: True
      Tags:
        - Key: Name
          Value: k8s-az1
      VpcId: !Ref K8sNetwork


  K8sMasterDefaultRouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref K8sMasterSubnetAz1
      RouteTableId: !Ref K8sRouteTable

  LocalKeyPair:
    Type: 'AWS::EC2::KeyPair'
    Properties:
      KeyName: ed25519
      PublicKeyMaterial: "ssh-ed25519 AAAAC3NzaC1lZDI1NTE5AAAAIKXTDLKU3P43+4f/EC8J0NSd5msVWvpubIHKX0xHNoX/ rbled@oxio.io"

  MgmtSSHSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Allow SSH traffic from anywhere
      GroupName: mgmt-allow-ssh
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: 0.0.0.0/0
      Tags: 
        - Key: Name
          Value: mgmt-allow-ssh
      VpcId: !Ref MgmtNetwork

  K8sSSHSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Allow SSH traffic from anywhere
      GroupName: k8s-allow-ssh
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: 0.0.0.0/0
      Tags:
        - Key: Name
          Value: k8s-allow-ssh
      VpcId: !Ref K8sNetwork

  SaltMaster:
    Type: AWS::EC2::Instance
    Properties:
      InstanceType: t2.small
      ImageId: !Ref RockyLinuxAMI
      SubnetId: !Ref MgmtDefaultSubnet
      KeyName: !Ref LocalKeyPair
      SecurityGroupIds:
        - !GetAtt MgmtSSHSecurityGroup.GroupId
      Tags:  
        - Key: Name
          Value: salt-master
  SaltMinion:
    Type: AWS::EC2::Instance
    Properties:
      InstanceType: t2.small
      ImageId: !Ref RockyLinuxAMI
      SubnetId: !Ref K8sMasterSubnetAz1
      KeyName: !Ref LocalKeyPair
      SecurityGroupIds:
        - !GetAtt K8sSSHSecurityGroup.GroupId
      Tags:  
        - Key: Name
          Value: salt-minion
